updated css and html

--- a/index.css
+++ b/index.css
@@ -185,22 +185,33 @@ body {
   background-color: darkgreen
 }
 
-#Contact {
+#contact {
   text-align: center;
   font-family: Helvetica;
-  width: 600px;
+  width: 800px;
   margin: 0 auto;
   padding-top: 60px;
 }
 
-#Contact #profile-explanation {
+#profile {
+  display: flex;
+  flex-direction: row
+}
+
+#contact #profile-explanation {
   /* margin-top: -20px; */
   font-family: Helvetica;
   font-size: 16px;
   text-align: justify;
+  width: 500px;
+  padding-right: 20px;
 }
 
-#Contact a{
+#contact #profile-photo {
+  width: 300px;
+}
+
+#contact a{
   text-decoration: none;
 }
 
