--- a/index.css
+++ b/index.css
@@ -281,6 +281,11 @@ footer a {
     margin-left: auto;
     margin-right: auto;
   }
+  .skill {
+    width: 150px;
+
+
+  }  
   #certificates{
     width: 100%;
     max-width: 100%;
