--- a/index.css
+++ b/index.css
@@ -268,6 +268,18 @@ footer a {
   animation: .8s zoom-in;
 }
 
+.fadeIn {
+	opacity : 0.1;
+	transform : translate(0, 50px);
+	transition : all 500ms;
+	}
+
+.fadeIn.scrollin {
+	opacity : 1;
+	transform : translate(0, 0);
+	}
+
+
 @media (max-width: 770px){
   #welcome-section {
     padding-top: 20vh;
