--- a/index.css
+++ b/index.css
@@ -40,15 +40,15 @@ body {
   opacity: 0;
 }
 
-.project-btns {
-  margin-top: 40px;
+.btns-section {
+  margin-top: 20px;
   margin-bottom: 40px;
-  width: 800px;
+  width: 600px;
   margin-left:auto;
   margin-right: auto;
 }
 
-.project-filter {
+.btns-filter {
   color: white;
   background-color:darkblue;
   border-radius: 5px;
@@ -60,16 +60,20 @@ body {
   font-size: 20px;
 }
 
-.project-filter:hover {
+.btns-filter:hover {
   color: black;
   background-color: cyan;
   border: cyan;
 }
 
-.project-filter:focus {
+.btns-filter:focus {
   color: black;
   background-color: cyan;
   border: cyan;
+}
+
+.org-btns {
+margin-top: -40px;
 }
   
 #projects{
@@ -209,7 +213,7 @@ body {
   background-color: lightcoral
 }
 
-.fcc {
+.freecodecamp {
   background-color: darkgreen
 }
 
@@ -295,11 +299,11 @@ footer a {
     font-size: 24px;
   }
 
-  .project-btns {
+  .btns-section {
     max-width: 100%;
     width: 100%;
     margin-left: auto;
-    margin-right: auto;    
+    margin-right: auto;
   }
 
   #projects{
@@ -310,8 +314,9 @@ footer a {
     margin-right: auto;
   }
 
-  .project-filter {
+  .btns-filter {
     margin-top: 10px;
+    font-size: 16px;
   }
   
   .project {
@@ -423,8 +428,9 @@ footer a {
     margin-right: auto;    
   }
 
-  .project-filter {
+  .btns-filter {
     margin-top: 10px;
+    font-size: 16px;
   }
 
   .project {
