--- a/index.css
+++ b/index.css
@@ -58,6 +58,7 @@ body {
   margin-left: 5px;
   margin-right: 5px;
   font-size: 20px;
+  opacity: 0.7;
 }
 
 .btns-filter:hover {
@@ -391,7 +392,7 @@ footer a {
     max-width: 195%;
     margin-left: auto;
     margin-right: auto;
-    font-size: 14px;
+    font-size: 16px;
   }
 
   #contact {
@@ -448,10 +449,15 @@ footer a {
     font-size: 24px;
   }
 
+  .btns-section {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
   #projects{
     padding-top: 10px;
-    max-width: 100%;
-    width: 100%;
+    max-width: 90%;
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
   }
@@ -465,25 +471,26 @@ footer a {
 
   .btns-filter {
     margin-top: 10px;
-    font-size: 16px;
+    font-size: 14px;
   }
 
   .project {
-    margin: 10px auto;
-    max-width: 90%;
-    width: 90%;
+    margin: 5px auto;
+    max-width: 80%;
+    width: 80%;
   }
 
   .sub-title{
-    font-size: 24px;
+    font-size: 20px;
   }
 
   .project .caption {
     font-size: 16px;
-    padding-top: 150px;
+    padding-top: 100px;
   }
 
   #skills{
+    padding-top: 10px;
     width: 100%;
     max-width: 100%;
     margin-left: auto;
@@ -491,10 +498,13 @@ footer a {
   }
 
   .skill {
-    width: 150px;
+    height: 20px;
+    width:45%;
+    font-size: 14px;
   }
 
   #certificates{
+    padding-top: 20px;
     width: 100%;
     max-width: 100%;
     margin-left: auto;
@@ -503,15 +513,19 @@ footer a {
 
   .certificate{
     width: 95%;
-    max-width: 195%;
+    max-width: 95%;
+    vertical-align: middle;
+    line-height: 30px;
+    height: 30px;
     margin-left: auto;
     margin-right: auto;
     font-size: 14px;
   }
 
   #contact {
-    width: 100%;
-    max-width: 100%;
+    padding-top: 20px;
+    width: 90%;
+    max-width: 90%;
     margin-left: auto;
     margin-right: auto;
   }
